--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mdi/js": "^7.2.96",
+    "@mdi/react": "^1.6.1",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.5",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-elements": "^3.4.3",
-    "react-native-responsive-dimensions": "^3.1.1"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-safe-area-context": "^4.5.1",
+    "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
